# workbench

./: .gitignore  README.md
ai/knapsack_problem/: README.md  main.py  models.py  utils.py
ai/simulated_annealing/: README.md  cost_algorithms.py  main.py  models.py  simulated_annealing.py  utils.py
ai/simulated_annealing/data/: analysis.ods
algebrae/: draft.py
algo/backtracking/: knights_tour.py  nqueen.py  rat_in_maze.py
algo/dei/: binary_search.py  merge_sort.py  quick_sort.py  tiling_problem.py
algo/dp/: cut_rod.py
algo/spiral/: examples.py  spiral.py
challenges/pythonchallenge/: 14.py  15.py  16.py
cli/: abbrev.py  cli.py
context_managers/: with_context.py
cron_jobs/hello-world/: Dockerfile
data_structures/: ds.py
discovery/: libs.py
gmaps/: gmaps.py
open_cv/: draft.py
open_cv/face_detection/: face_recognition.py
string_format/: 4methods.py
web/orderio/: .gitignore  Dockerfile  README.md  entrypoint.sh  orders-test.xml  pyproject.toml
web/orderio/orders/: models.py  serializers.py  urls.py  views.py
web/orderio/orders/management/commands/: import_orders.py
web/orderio/orders/migrations/: 0001_initial.py
web/sv_test/: .gitignore  README.md  manage.py  requirements.txt  swagger.yaml
web/sv_test/ip/: serializers.py  tests.py  urls.py  views.py
web/sv_test/skillvaluetest/: settings.py  urls.py  wsgi.py
